opa-gatekeeper-privileged-container-policy/constraints/k8srestrictprivileged-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srestrictprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srestrictprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Privileged container is not allowed: %v", [container.name])
        }
